# seedmirror

./: BUILDING.md  Cargo.toml  README.md
.github/workflows/: release-binary.yaml  release-docker.yaml  release.yaml
crates/seedmirror-client/: Cargo.toml
crates/seedmirror-client/src/: cli.rs  command.rs  main.rs  transfer.rs  workqueue.rs
crates/seedmirror-core/: Cargo.toml
crates/seedmirror-core/src/: message.rs
crates/seedmirror-server/: Cargo.toml
crates/seedmirror-server/src/: cli.rs  connection.rs  informer.rs  main.rs  watcher.rs
crates/seedmirror-test/: Cargo.toml
crates/seedmirror-test/src/: lib.rs  process.rs
crates/seedmirror-test/tests/: sync_test.rs
docker/seedmirror-client/: .dockerignore  Dockerfile  docker-entrypoint.sh
