[workspace]
resolver = "3"
members = [
    "crates/seedmirror-client", "crates/seedmirror-core",
    "crates/seedmirror-server"
]
default-members = [
    "crates/seedmirror-client",
    "crates/seedmirror-server"
]

[workspace.dependencies]
# Error handling
anyhow = "1.0.99"
# CLI parsing
clap = { version = "4.5.46", features = ["derive"] }
# Logging
env_logger = "0.11.8"
log = "0.4.27"
# Message serialization/deserialization
serde_json = "1.0.143"
# Async
tokio = { version = "1.47.1", features = ["full"] }
