[package]
name = "seedmirror-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
seedmirror-core = { path = "../seedmirror-core" }
serde_json.workspace = true
shlex = "1.3.0"
tokio.workspace = true
